categorie lijst aangepast en dashboard css gemaakt

--- a/html/Info.html
+++ b/html/Info.html
@@ -137,7 +137,7 @@
 <!-- sancties/defect  -->
 <div class="info-sancties"><h2>Sancties</h2>
 <p>Indien je het apparaat niet komt ophalen op de uitleendatum dat je hebt gekozen of je het apparaat te laat inlevert, wordt er een <b>waarschuwing</b> bij je account toegevoegd.
-    Eens je aan 2 waarschuwingen hebt kom je voor 3 maanden op een <b>blacklist</b> waarbij je geen apparaten meer kan uitlenen tijdens die periode.</p>
+  Eens je aan 2 waarschuwingen hebt kom je voor 3 maanden op een <b>blacklist</b> waarbij je geen apparaten meer kan uitlenen tijdens die periode.</p>
 </div>
 
 <div class="info-defect">
@@ -145,10 +145,10 @@
 <p>Indien je een defect of schade heeft dan meld je dit zelf aan via de reservaties pagina. Je klikt op de bijhorende knop en volgt de instructies op de pagina. Zorg dat je het juiste apparaat aanklikt met de bijhorende apparaat ID. Deze ID-sticker vind je terug als een sticker op het apparaat.</p>
 </div>
 
-<!-- veel gesteld vragen  -->
+<!-- veel gestelde vragen  -->
 <!-- antwoorden nog bijzetten  -->
+<h2 class="veel_vragen">Veelgestelde vragen</h2>
 <div class="info-veel-vragen">
-  <h1>Veelgestelde vragen</h1>
 <div class="info-box">
   <button class="info-button">
     <i class="info-angle-down"></i>
@@ -183,7 +183,7 @@
 </div>
 </div>
 <!-- form  -->
-<h1 class="info-form-h1">Geen antwoord gevonden op je vraag? Vul dit formulier dan in. </h1>
+<h2 class="info-form-h2">Geen antwoord gevonden op je vraag? Vul dit formulier dan in. </h1>
 <form class="info-form">
   <div class="info-text"><input type="text"></div>
   <div class="info-submit"><input type="submit" value="Verstuur"></div>
