dashboard gemaakt + php files aangemaakt en geordend

--- a/html/Admin/Dashboard.html
+++ b/html/Admin/Dashboard.html
@@ -27,15 +27,15 @@
 <div class="inhoud_body">
     <div class="linker_nav">
         <ul>
-            <li><a href="#">Dashboard</a></li>
-            <li><a href="#">Te laat</a></li>
-            <li><a href="#">Blacklist</a></li>
-            <li><a href="#">Uitleningen</a></li>
-            <li><a href="#">Verlengingen</a></li>
-            <li><a href="#">Inventaris</a></li>
-            <li><a href="#">Kits</a></li>
-            <li><a href="#">Info</a></li>
-            <li><a href="#">Defect</a></li>
+            <li><h3><a href="#">Dashboard</a></h2></li>
+            <li><h3><a href="#">Te laat</a></h2></li>
+            <li><h3><a href="#">Blacklist</a></h2></li>
+            <li><h3><a href="#">Uitleningen</a></h2></li>
+            <li><h3><a href="#">Verlengingen</a></h2></li>
+            <li><h3><a href="#">Inventaris</a></h2></li>
+            <li><h3><a href="#">Kits</a></h2></li>
+            <li><h3><a href="#">Info</a></h2></li>
+            <li><h3><a href="#">Defect</a></h2></li>
         </ul>
     </div>
     <div class="rechter_grid">
@@ -69,8 +69,8 @@
                 <p>Ophalen</p>
                 <div class="iconen">
                     <img src="/images/svg/screwdriver-wrench-solid.svg" alt="">
-                    <img src="/images/svg/circle-check-solid.svg" alt="">
-                    <img src="/images/svg/circle-xmark-solid.svg" alt="">
+                    <img class="check" src="/images/svg/circle-check-solid.svg" alt="">
+                    <img class="verwijder" src="/images/svg/circle-xmark-solid.svg" alt="">
                 </div>
             </div>
         </div>
