--- a/html/Reservaties.html
+++ b/html/Reservaties.html
@@ -90,38 +90,140 @@
         <div class="reservatie-top">
           <h2>Nog op te halen</h2>
           <a href="">
-            alles annuleren
+            Alles annuleren
             <img src="../images/svg/circle-xmark-solid.svg" alt="xmark" />
-        </a>
+          </a>
         </div>
-        <div class="reservatie-box1">
+        <div class="reservatie-boxes">
+          <div class="reservatie-box1">
             <label class="reservatie-checkbox-container">
-                <input type="checkbox">
-                <span class="reservatie-checkmark"></span>
-              </label>
-              <div class="reservatie-box-full">
-            <div class="reservatie-box-info">
-                <img src="../images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="foto">
-            </div>
-                <div class="reservatie-artikel-info"><h3>Canon-M50</h3>
+              <input type="checkbox" />
+              <span class="reservatie-checkmark"></span>
+            </label>
+            <div class="reservatie-box-full">
+              <div class="reservatie-box-info">
+                <img
+                  src="../images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp"
+                  alt="foto"
+                />
+              </div>
+              <div class="reservatie-artikel-info">
+                <h3>Canon-M50</h3>
                 <p>van 22/04/2024</p>
                 <p>tot 27/04/2024</p>
-                <h3>aantal:</h3>
+                <div class="reservatie-artikel-info-aantal"><h3>aantal:</h3>
                 <p>1</p>
             </div>
-            <div class="reservatie-status">
+              </div>
+              <div class="reservatie-status">
                 <h3>Status:</h3>
                 <p><b>Binnen 3 dagen ophalen</b></p>
                 <h2>Reservatie-ID:</h2>
                 <p>04125</p>
+              </div>
+              <div class="reservatie-annuleren">
+                <a href="">
+                  Annuleren<img
+                    src="../images/svg/circle-xmark-solid.svg"
+                    alt="xmark"
+                  />
+                </a>
+              </div>
             </div>
-            <div class="reservatie-annuleren"><a href="">
-                annuleren<img src="../images/svg/circle-xmark-solid.svg" alt="xmark" />
+          </div>
+
+            <div class="reservatie-box1">
+              <label class="reservatie-checkbox-container">
+                <input type="checkbox" />
+                <span class="reservatie-checkmark"></span>
+              </label>
+              <div class="reservatie-box-full">
+                <div class="reservatie-box-info">
+                  <img
+                    src="../images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp"
+                    alt="foto"
+                  />
+                </div>
+                <div class="reservatie-artikel-info">
+                  <h3>Canon-M50</h3>
+                  <p>van 22/04/2024</p>
+                  <p>tot 27/04/2024</p>
+                  <div class="reservatie-artikel-info-aantal"><h3>aantal:</h3>
+                    <p>1</p>
+                </div>
+                </div>
+                <div class="reservatie-status">
+                  <h3>Status:</h3>
+                  <p><b>Binnen 3 dagen ophalen</b></p>
+                  <h2>Reservatie-ID:</h2>
+                  <p>04125</p>
+                </div>
+                <div class="reservatie-annuleren">
+                  <a href="">
+                    annuleren<img
+                      src="../images/svg/circle-xmark-solid.svg"
+                      alt="xmark"
+                    />
+                  </a>
+                </div>
+              </div>
+            </div>
+        </div>
+
+        <div class="reservatie-opgehaald">
+            <h2>Opgehaald</h2>
+            <a href="">
+              Alles verlengen
+              <img src="../images/svg/calendar-regular.svg" alt="calender" />
             </a>
+          </div>
+          <div class="reservatie-boxes">
+            <div class="reservatie-box2">
+              <label class="reservatie-checkbox-container">
+                <input type="checkbox" />
+                <span class="reservatie-checkmark"></span>
+              </label>
+              <div class="reservatie-box-full">
+                <div class="reservatie-box-info">
+                  <img
+                    src="../images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp"
+                    alt="foto"
+                  />
+                </div>
+                <div class="reservatie-artikel-info">
+                  <h3>Canon-M50</h3>
+                  <p>van 15/04/2024</p>
+                  <p>tot 25/04/2024</p>
+                  <div class="reservatie-artikel-info-aantal"><h3>aantal:</h3>
+                    <p>1</p>
+                </div>
+                </div>
+                <div class="reservatie-status">
+                  <h3>Status:</h3>
+                  <p><b>Binnen 3 dagen in te leveren</b></p>
+                  <h2>Reservatie-ID:</h2>
+                  <p>04125</p>
+                </div>
+                <div class="reservatie-verleng-box1">
+                    <div class="reservatie-defect">
+                  <a href="">
+                    Defect<br>melden <img
+                      src="../images/svg/screwdriver-wrench-solid.svg"
+                      alt="fixing"
+                    />
+                  </a>
+                </div>
+                <div class="reservatie-verlengen">
+                  <a href="">
+                    Verleng <img
+                      src="../images/svg/calendar-regular.svg"
+                      alt="calender"
+                    />
+                  </a>
+                </div>
+                </div>
+              </div>
             </div>
-            </div>
-        </div>
-        </div>
         <!-- footer -->
         <footer>
           <div class="footer_container">
