--- a/html/Admin/Kits.html
+++ b/html/Admin/Kits.html
@@ -17,9 +17,6 @@
         </div>
     </nav>
     
-    <!-- zoekbalk -->
-    <div class="zoekbalk_container">
-    </div>
 <div class="keer_terug">
         <img src="/images/svg/chevron-left-solid.svg" alt="">
         <h1>Kits</h1>
@@ -27,18 +24,19 @@
 <div class="inhoud_body">
     <div class="linker_nav">
         <ul>
-            <li><h3><a href="/html/Admin/Dashboard.html">Dashboard</a></h2></li>
-            <li><h3><a href="/html/Admin/TeLaat.html">Te laat</a></h2></li>
-            <li><h3><a href="/html/Admin/Blacklist.html">Blacklist</a></h2></li>
-            <li><h3><a href="/html/Admin/Uitleningen.html">Uitleningen</a></h2></li>
-            <li><h3><a href="/html/Admin/Verleningen.html">Verlengingen</a></h2></li>
-            <li><h3><a href="/html/Admin/Inventaris.html">Inventaris</a></h2></li>
-            <li><h3><a href="/html/Admin/Kits.html">Kits</a></h2></li>
-            <li><h3><a href="/html/Admin/Info.html">Info</a></h2></li>
-            <li><h3><a href="/html/Admin/Defect.html">Defect</a></h2></li>
+            <li><h3><a href="/html/Admin/Dashboard.html">Dashboard</a></h3></li>
+            <li><h3><a href="/html/Admin/TeLaat.html">Te laat</a></h3></li>
+            <li><h3><a href="/html/Admin/Blacklist.html">Blacklist</a></h3></li>
+            <li><h3><a href="/html/Admin/Uitleningen.html">Uitleningen</a></h3></li>
+            <li><h3><a href="/html/Admin/Verleningen.html">Verlengingen</a></h3></li>
+            <li><h3><a href="/html/Admin/Inventaris.html">Inventaris</a></h3></li>
+            <li><h3><a href="/html/Admin/Kits.html">Kits</a></h3></li>
+            <li><h3><a href="/html/Admin/Info.html">Info</a></h3></li>
+            <li><h3><a href="/html/Admin/Defect.html">Defect</a></h3></li>
         </ul>
     </div>
     <div class="rechter_grid">
+        <!-- zoekbalk -->
         <div class="zoeken_container">
             <div class="zoeken">
                 <input type="text" placeholder="Voer een naam of ID in...">
@@ -46,25 +44,31 @@
             </div>
         </div>
         <div class="kit_container">
-            <div class="kit">
                 <div class="kit_informatie">
                     <h3>Naam: <span>Fotografie kit Canon-M50</span></h3>
                     <h3>Kit-ID: <span>0001</span></h3>
                 </div>
+                <div class="kit_visueel_container">
                 <div class="kit_visueel">
-                    <img src="/images/svg/chevron-left-solid.svg" alt="">
-                    <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
-                    <img src="/images/svg/plus-solid.svg" alt="">
-                    <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
-                    <img src="/images/svg/plus-solid.svg" alt="">
-                    <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
-                    <img src="/images/svg/chevron-right-solid.svg" alt="">
+                    <div class="kit_visueel_small"><img src="/images/svg/chevron-left-solid.svg" alt=""></div>
+                    <div class="kit_visueel_img"><img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt=""></div>
+                 <div class="kit_visueel_small"><img src="/images/svg/plus-solid.svg" alt=""></div>
+                    <div class="kit_visueel_img"><img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt=""></div>
+                 <div class="kit_visueel_small"><img src="/images/svg/plus-solid.svg" alt=""></div>
+                    <div class="kit_visueel_img"><img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt=""></div>
+                 <div class="kit_visueel_small"><img src="/images/svg/chevron-right-solid.svg" alt=""></div>
                     <div class="kit_acties">
-                        <div class="verwijder_kit">
+                        <div class="kit_verwijder_kit">
                             <a href="#">
-                                
+                               Verwijder kit <img src="../../images/svg/circle-xmark-solid.svg" alt=""> 
                             </a>
                         </div>
+                        <div class="kit_wijzig_kit">
+                            <a href="">
+                                Wijzig kit <img src="../../images/svg/pen-to-square-regular.svg" alt="">
+                            </a>
+                            </div>
+                    </div>
                     </div>
                 </div>
             </div>
