--- a/html/Reservaties.html
+++ b/html/Reservaties.html
@@ -14,73 +14,10 @@
         <title>Info</title>
         <link rel="stylesheet" href="/css/stylesheet.css" />
         <style>
-          @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+         
         </style>
       </head>
       <body>
-        <!-- bovenste navigatie -->
-        <nav>
-          <a href="Home.html"
-            ><img
-              class="ehb_logo"
-              src="/images/jpg/horizontaal EhB-logo (transparante achtergrond).png"
-              alt="EhB-logo"
-          /></a>
-          <ul>
-            <li>
-              <a href="/html/Info.html"><h1>Info</h1></a>
-            </li>
-            <li>
-              <a href="/html/Inventaris.html"><h1>Inventaris</h1></a>
-            </li>
-            <li>
-              <a href="/html/Kalender.html"><h1>Kalender</h1></a>
-            </li>
-            <li>
-              <a href="/html/Reservaties.html"><h1>Reservaties</h1></a>
-            </li>
-          </ul>
-          <div class="rechter_navigatie">
-            <a href="#"
-              ><img src="/images/svg/heart-solid.svg" alt="favorietenlijst"
-            /></a>
-            <a href="#"
-              ><img
-                src="/images/svg/cart-shopping-solid.svg"
-                alt="winkelmandje"
-            /></a>
-            <a href="#"
-              ><img src="/images/svg/user-solid.svg" alt="profiel - logout"
-            /></a>
-          </div>
-        </nav>
-
-        <!-- zoekbalk -->
-        <div class="zoekbalk_container">
-          <div class="zoekbalk">
-            <select name="categorie" id="">
-              <option value="alles"></option>
-              <option value="audio">Audio</option>
-              <option value="belichting">Belichting</option>
-              <option value="tools">Tools</option>
-              <option value="varia">Varia</option>
-              <option value="video">Video</option>
-              <option value="xr">XR</option>
-            </select>
-            <input
-              id="zoek_input"
-              type="text"
-              placeholder="Geef een zoekterm in ..."
-            />
-            <button id="zoek_btn">
-              <img
-                src="/images/svg/magnifying-glass-solid.svg"
-                alt="magnifying glass"
-              />
-            </button>
-          </div>
-        </div>
-
         <div class="reservatie-chevron-left">
           <a href="#">
             <img src="/images/svg/chevron-left-solid.svg" alt="chevron left"
@@ -89,221 +26,124 @@
         </div>
         <div class="reservatie-top">
           <h2>Nog op te halen</h2>
-          <a href="">
-            Alles annuleren
-            <img src="../images/svg/circle-xmark-solid.svg" alt="xmark" />
-          </a>
-        </div>
-        <div class="reservatie-boxes">
-          <div class="reservatie-box1">
-            <label class="reservatie-checkbox-container">
-              <input type="checkbox" />
-              <span class="reservatie-checkmark"></span>
-            </label>
-            <div class="reservatie-box-full">
-              <div class="reservatie-box-info">
-                <img
-                  src="../images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp"
-                  alt="foto"
-                />
-              </div>
-              <div class="reservatie-artikel-info">
-                <h3>Canon-M50</h3>
-                <p>van 22/04/2024</p>
-                <p>tot 27/04/2024</p>
-                <div class="reservatie-artikel-info-aantal"><h3>aantal:</h3>
-                <p>1</p>
-            </div>
-              </div>
-              <div class="reservatie-status">
-                <h3>Status:</h3>
-                <p><b>Binnen 3 dagen ophalen</b></p>
-                <h2>Reservatie-ID:</h2>
-                <p>04125</p>
-              </div>
-              <div class="reservatie-annuleren">
-                <a href="">
-                  Annuleren<img
-                    src="../images/svg/circle-xmark-solid.svg"
-                    alt="xmark"
-                  />
-                </a>
-              </div>
-            </div>
-          </div>
-
-            <div class="reservatie-box1">
-              <label class="reservatie-checkbox-container">
-                <input type="checkbox" />
-                <span class="reservatie-checkmark"></span>
-              </label>
-              <div class="reservatie-box-full">
-                <div class="reservatie-box-info">
-                  <img
-                    src="../images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp"
-                    alt="foto"
-                  />
-                </div>
-                <div class="reservatie-artikel-info">
-                  <h3>Canon-M50</h3>
-                  <p>van 22/04/2024</p>
-                  <p>tot 27/04/2024</p>
-                  <div class="reservatie-artikel-info-aantal"><h3>aantal:</h3>
-                    <p>1</p>
-                </div>
-                </div>
-                <div class="reservatie-status">
-                  <h3>Status:</h3>
-                  <p><b>Binnen 3 dagen ophalen</b></p>
-                  <h2>Reservatie-ID:</h2>
-                  <p>04125</p>
-                </div>
-                <div class="reservatie-annuleren">
-                  <a href="">
-                    annuleren<img
-                      src="../images/svg/circle-xmark-solid.svg"
-                      alt="xmark"
-                    />
-                  </a>
-                </div>
-              </div>
-            </div>
-        </div>
-
-        <div class="reservatie-opgehaald">
-            <h2>Opgehaald</h2>
+          <div class="alles_annuleren">
             <a href="">
-              Alles verlengen
-              <img src="../images/svg/calendar-regular.svg" alt="calender" />
+              <p>Alles annuleren</p>
+              <img src="../images/svg/circle-xmark-solid.svg" alt="xmark" />
             </a>
           </div>
-          <div class="reservatie-boxes">
-            <div class="reservatie-box2">
-              <label class="reservatie-checkbox-container">
-                <input type="checkbox" />
-                <span class="reservatie-checkmark"></span>
-              </label>
-              <div class="reservatie-box-full">
-                <div class="reservatie-box-info">
-                  <img
-                    src="../images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp"
-                    alt="foto"
-                  />
-                </div>
-                <div class="reservatie-artikel-info">
-                  <h3>Canon-M50</h3>
-                  <p>van 15/04/2024</p>
-                  <p>tot 25/04/2024</p>
-                  <div class="reservatie-artikel-info-aantal"><h3>aantal:</h3>
-                    <p>1</p>
-                </div>
-                </div>
-                <div class="reservatie-status">
-                  <h3>Status:</h3>
-                  <p><b>Binnen 3 dagen in te leveren</b></p>
-                  <h2>Reservatie-ID:</h2>
-                  <p>04125</p>
-                </div>
-                <div class="reservatie-verleng-box1">
-                    <div class="reservatie-defect">
-                  <a href="">
-                    Defect<br>melden <img
-                      src="../images/svg/screwdriver-wrench-solid.svg"
-                      alt="fixing"
-                    />
-                  </a>
-                </div>
-                <div class="reservatie-verlengen">
-                  <a href="">
-                    Verleng <img
-                      src="../images/svg/calendar-regular.svg"
-                      alt="calender"
-                    />
-                  </a>
-                </div>
-                </div>
-              </div>
-            </div>
-        <!-- footer -->
-        <footer>
-          <div class="footer_container">
-            <div class="ehb-info">
-              <ul>
-                <!-- emial linken met echte mail -->
-                <li>
-                  <a href="#"
-                    ><img
-                      src="../images/svg/envelope-solid.svg"
-                      alt="envelope"
-                    />
-                    medialab.ehb@ehb.be</a
-                  >
-                </li>
-                <!-- linken so that it calls directly -->
-                <li>
-                  <a href="#"
-                    ><img src="../images/svg/phone-solid.svg" alt="phone" /> +32
-                    84 42 63 78</a
-                  >
-                </li>
-                <!-- linken so that it can directly go to the webside -->
-                <li>
-                  <a href="#"
-                    ><img src="../images/svg/desktop-solid.svg" alt="desktop" />
-                    www.erasmushogeschool.be</a
-                  >
-                </li>
-                <!-- linken met google maps -->
-                <li>
-                  <a href="#">
-                    <img
-                      src="../images/svg/location-dot-solid.svg"
-                      alt="location"
-                    />
-                    Nijverheidskaai 170,1070 Anderlecht</a
-                  >
-                </li>
-              </ul>
-            </div>
-            <div class="opening-hours">
-              <h1>Openingsuren</h1>
-              <table>
-                <tr>
-                  <th>Maandag</th>
-                  <td>10:00 - 12:00</td>
-                  <td>12:30 - 17:00</td>
-                </tr>
-                <tr>
-                  <th>Dinsdag</th>
-                  <td>/</td>
-                  <td>/</td>
-                </tr>
-                <tr>
-                  <th>Woensdag</th>
-                  <td>/</td>
-                  <td>/</td>
-                </tr>
-                <tr>
-                  <th>Donderdag</th>
-                  <td>10:00 - 12:00</td>
-                  <td>12:30 - 17:00</td>
-                </tr>
-                <tr>
-                  <th>Vrijdag</th>
-                  <td>10:00 - 12:00</td>
-                  <td>12:30 - 17:00</td>
-                </tr>
-                <tr>
-                  <th>Weekend</th>
-                  <td>/</td>
-                  <td>/</td>
-                </tr>
-              </table>
+        </div>
+
+        <div class="ophalen_lijst_container">
+          <div class="ophalen_reservatie_container">
+            <label for="#">
+              <input type="checkbox">
+            </label>
+            <div class="reservatie_item">
+              <a href="#" class="reservatie_item_a">
+                <ul>
+                  <li><img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt=""></li>
+                  <li class="reservatie_info">
+                    <h3>Canon-M50</h3>
+                    <p>van 22/04/2024</p>
+                    <p>tot 27/04/2024</p>
+                    <h3>Aantal: <br><span>1</span></h3>
+                  </li>
+                  <li class="status">
+                    <h3>Status:</h3>
+                    <p><b>Binnen 3 dagen ophalen</b></p>
+                    <h3>Reservatie-ID: <br> <span>04125</span></h2>
+                  </li>
+                  <li>
+                    <div class="annuleer_btn">
+                      <button>
+                        <p>Annuleren</p>
+                        <img src="../images/svg/circle-xmark-solid.svg" alt="xmark"/>
+                      </button>
+                    </div>
+                  </li>
+                </ul>
+              </a>
             </div>
           </div>
-          <div class="einde"><p>&copy;Groep 8 - Programming Project</p></div>
-        </footer>
-      </body>
-    </html>
-  </body>
-</html>
+          <div class="ophalen_reservatie_container">
+            <label for="#">
+              <input type="checkbox">
+            </label>
+            <div class="reservatie_item">
+              <a href="#" class="reservatie_item_a">
+                <ul>
+                  <li><img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt=""></li>
+                  <li class="reservatie_info">
+                    <h3>Canon-M50</h3>
+                    <p>van 22/04/2024</p>
+                    <p>tot 27/04/2024</p>
+                    <h3>Aantal: <br><span>1</span></h3>
+                  </li>
+                  <li class="status">
+                    <h3>Status:</h3>
+                    <p><b>Binnen 3 dagen ophalen</b></p>
+                    <h3>Reservatie-ID: <br> <span>04125</span></h2>
+                  </li>
+                  <li>
+                    <div class="annuleer_btn">
+                      <button>
+                        <p>Annuleren</p>
+                        <img src="../images/svg/circle-xmark-solid.svg" alt="xmark"/>
+                      </button>
+                    </div>
+                  </li>
+                </ul>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="reservatie-top">
+          <h2>Opgehaald</h2>
+          <div class="alles_verlengen">
+            <a href="#">
+              <p>Alles verlengen</p>
+              <img src="/images/svg/calendar-regular.svg" alt="xmark" />
+            </a>
+          </div>
+        </div>
+        <div class="opgehaald_lijst_container">
+          <div class="opgehaald_reservatie_container">
+            <label for="#">
+              <input type="checkbox">
+            </label>
+            <div class="reservatie_item">
+              <a href="#" class="reservatie_item_a">
+                <ul>
+                  <li><img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt=""></li>
+                  <li class="reservatie_info">
+                    <h3>Canon-M50</h3>
+                    <p>van 22/04/2024</p>
+                    <p>tot 27/04/2024</p>
+                    <h3>Aantal: <br><span>1</span></h3>
+                  </li>
+                  <li class="status">
+                    <h3>Status:</h3>
+                    <p><b>Binnen 3 dagen ophalen</b></p>
+                    <h3>Reservatie-ID: <br> <span>04125</span></h2>
+                  </li>
+                  <li>
+                    <div class="defect_btn">
+                      <button>
+                        <p>Defect melden</p>
+                        <img src="../images/svg/screwdriver-wrench-solid.svg" alt="defect"/>
+                      </button>
+                    </div>
+                    <div class="verleng_btn">
+                      <button>
+                        <p>Verleng</p>
+                      <img src="/images/svg/calendar-regular.svg" alt="verleng">
+                      </button>
+                    </div>
+                  </li>
+                </ul>
+              </a>
+            </div>
+          </div>
+        </div>
+        
