--- a/html/Admin/Defect.html
+++ b/html/Admin/Defect.html
@@ -1,11 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Defect</title>
+    <link rel="stylesheet" href="/css/admin/stylesheet_admin.css" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+    </style>
+  </head>
+  <body>
+    <nav>
+      <a href="Home.html"
+        ><img
+          class="ehb_logo"
+          src="/images/jpg/horizontaal EhB-logo (transparante achtergrond).png"
+          alt="EhB-logo"
+      /></a>
+      <div class="rechter_navigatie">
+        <a href="#"
+          ><img src="/images/svg/user-solid.svg" alt="profiel - logout"
+        /></a>
+      </div>
+    </nav>
+
+    <div class="keer_terug">
+      <img src="/images/svg/chevron-left-solid.svg" alt="" />
+      <h1>Defect</h1>
+    </div>
+    <div class="inhoud_body">
+      <div class="linker_nav">
+        <ul>
+          <li>
+            <h3><a href="/html/Admin/Dashboard.html">Dashboard</a></h3>
+          </li>
+          <li>
+            <h3><a href="/html/Admin/TeLaat.html">Te laat</a></h3>
+          </li>
+          <li>
+            <h3><a href="/html/Admin/Blacklist.html">Blacklist</a></h3>
+          </li>
+          <li>
+            <h3><a href="/html/Admin/Uitleningen.html">Uitleningen</a></h3>
+          </li>
+          <li>
+            <h3><a href="/html/Admin/Verleningen.html">Verlengingen</a></h3>
+          </li>
+          <li>
+            <h3><a href="/html/Admin/Inventaris.html">Inventaris</a></h3>
+          </li>
+          <li>
+            <h3><a href="/html/Admin/Kits.html">Kits</a></h3>
+          </li>
+          <li>
+            <h3><a href="/html/Admin/Info.html">Info</a></h3>
+          </li>
+          <li>
+            <h3><a href="/html/Admin/Defect.html">Defect</a></h3>
+          </li>
+        </ul>
+      </div>
+      <div class="defect_rechter_grid">
+        <!-- zoekbalk -->
+        <div class="zoeken_container">
+          <div class="zoeken">
+            <input type="text" placeholder="Voer een naam of ID in..." />
+            <button type="submit">
+              <img
+                src="/images/svg/magnifying-glass-solid.svg"
+                alt="zoek icoon"
+              />
+            </button>
+          </div>
+        </div>
+        <!-- container box  -->
+        
+        <div class="defect_container">
+            <div class="defect_visueel_img">
+                <img
+                  src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp"
+                  alt=""
+                />
+              </div>
+          <div class="defect_informatie">
+            <h3>Naam: <span>Canon-M50</span></h3>
+            <h3>Kit-ID: <span>RZ</span></h3>
+            <h3>Defect: <span>flash werkt niet</span></h3>
+          </div>
+            <!-- imges  -->
+            <div class="defect_visueel">
+              <!-- verwijderen wijzigen  -->
+              <div class="defect_acties">
+                <div class="defect_hersteld">
+                  <a href="#">
+                    Hersteld
+                    <img src="../../images/svg/screwdriver-wrench-solid.svg" alt="xmark" />
+                  </a>
+                </div>
+                <div class="defect_verwijder">
+                  <a href="">
+                    Verwijder
+                    <img
+                      src="../../images/svg/circle-xmark-solid.svg"
+                      alt=""
+                    />
+                  </a>
+                </div>
+              </div>
+          </div>
+        </div>
+        <div class="defect_add">
+            <a href="">Defect toevoegen</a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
