--- a/html/Admin/Info.html
+++ b/html/Admin/Info.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kits</title>
+    <title>Info</title>
     <link rel="stylesheet" href="/css/admin/stylesheet_admin.css" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
@@ -28,6 +28,7 @@
       <img src="/images/svg/chevron-left-solid.svg" alt="" />
       <h1>Info</h1>
     </div>
+    <div class="info_body">
     <div class="linker_nav">
       <ul>
         <li>
@@ -59,33 +60,33 @@
         </li>
       </ul>
     </div>
-    <div class="Info_body">
+    <div class="Info_rechter_grid">
     <div class="info_uitleen_uitleg">
       <h2>Hoe leen je iets uit?</h2>
       <ul>
         <li>
-          <h3>Stap 1 <img src="../../images/svg/pen-to-square-regular.svg" alt=""></h3>
+          <h3>Stap 1 <a href=""><img src="../../images/svg/pen-to-square-regular.svg" alt=""></a></h3>
           <p>
             Kies een apparaat op basis van de categorieën op de thuispagina of
             zoek een apparaat met de zoekbalk.
           </p>
         </li>
         <li>
-          <h3>Stap 2 <img src="../../images/svg/pen-to-square-regular.svg" alt=""></h3>
+          <h3>Stap 2 <a href=""><img src="../../images/svg/pen-to-square-regular.svg" alt=""></a></h3>
           <p>
             Bepaal de uitleenperiode door middel van het resultaat te filteren
             of bepaal het bij het reserveringsproces.
           </p>
         </li>
         <li>
-          <h3>Stap 3 <img src="../../images/svg/pen-to-square-regular.svg" alt=""></h3>
+          <h3>Stap 3 <a href=""><img src="../../images/svg/pen-to-square-regular.svg" alt=""></a></h3>
           <p>
             Vul de nodige informatie aan en voeg de reservatie toen aan het
             winkelmandje, of reserveer direct.
           </p>
         </li>
         <li>
-          <h3>Stap 4 <img src="../../images/svg/pen-to-square-regular.svg" alt=""></h3>
+          <h3>Stap 4 <a href=""><img src="../../images/svg/pen-to-square-regular.svg" alt=""></a></h3>
           <p>Haal het gereserveerde apparaat op in het medialab!</p>
         </li>
       </ul>
@@ -93,7 +94,7 @@
 
     <!-- openings hours  -->
     <div class="info-opening-hours">
-      <h1>Openingsuren <img src="../../images/svg/pen-to-square-regular.svg" alt=""></h1>
+      <h1>Openingsuren <a href=""><img src="../../images/svg/pen-to-square-regular.svg" alt=""></a></h1>
       <table>
         <tr>
           <th>Maandag</th>
@@ -130,7 +131,7 @@
 
     <!-- sancties/defect  -->
     <div class="info-sancties">
-      <h2>Sancties <img src="../../images/svg/pen-to-square-regular.svg" alt=""></h2>
+      <h2>Sancties <a href=""><img src="../../images/svg/pen-to-square-regular.svg" alt=""></a></h2>
       <p>
         Indien je het apparaat niet komt ophalen op de uitleendatum dat je hebt
         gekozen of je het apparaat te laat inlevert, wordt er een
@@ -142,7 +143,7 @@
     </div>
 
     <div class="info-defect">
-      <h2>Defect melden <img src="../../images/svg/pen-to-square-regular.svg" alt=""> </h2>
+      <h2>Defect melden <a href=""><img src="../../images/svg/pen-to-square-regular.svg" alt=""></a> </h2>
       <p>
         Indien je een defect of schade heeft dan meld je dit zelf aan via de
         reservaties pagina. Je klikt op de bijhorende knop en volgt de
@@ -152,5 +153,6 @@
       </p>
     </div>
   </div>
+</div>
   </body>
 </html>
