nav bar gelinkt, info page form aangemaakt, UitleningToevoegen pagina klaar gemaakt

--- a/html/Admin/Blacklist.html
+++ b/html/Admin/Blacklist.html
@@ -34,9 +34,9 @@
                 <li><h3><a href="/html/Admin/Uitleningen.html">Uitleningen</a></h3></li>
                 <li><h3><a href="/html/Admin/Verleningen.html">Verlengingen</a></h3></li>
                 <li><h3><a href="/html/Admin/Inventaris.html">Inventaris</a></h3></li>
-                <li><h3><a href="#">Kits</a></h3></li>
-                <li><h3><a href="#">Info</a></h3></li>
-                <li><h3><a href="#">Defect</a></h3></li>
+                <li><h3><a href="/html/Admin/Kits.html">Kits</a></h3></li>
+                <li><h3><a href="/html/Admin/Info.html">Info</a></h3></li>
+                <li><h3><a href="/html/Admin/Defect.html">Defect</a></h3></li>
             </ul>
         </div>
         <div class="rechter_grid">
