--- a/html/Admin/UitleningToevoegen.html
+++ b/html/Admin/UitleningToevoegen.html
@@ -41,9 +41,16 @@
     <div class="rechter_grid">
         <div class="uitlening_specificaties">
             <form action="">
+                <div class="uitlening_toe">
+                <h2>E-mail:</h2>
                 <input type="email" placeholder="Vul het e-mailadres in ...">
+            </div>
+            <div class="uitlening_toe">
+                <h2>Apparaat 1:</h2>
                 <input type="text" placeholder="Voer het apparaat-id of kit-id in ...">
+            </div>
                 <div class="datum_kiezen">
+                    <h2>Uitleentermijn:</h2>
                     <input type="date" placeholder="Bepaal het uitleentermijn">
                 </div>
             </form>
@@ -54,6 +61,8 @@
             <div class="bevestig">
                 <button type="submit">Bevestig</button>
             </div>
+        </div>
+    </div>
     
 </body>
 </html>
