--- a/html/Admin/Inventaris.html
+++ b/html/Admin/Inventaris.html
@@ -22,7 +22,7 @@
     </div>
 <div class="keer_terug">
         <img src="/images/svg/chevron-left-solid.svg" alt="">
-        <h1>Dashboard</h1>
+        <h1>Inventaris</h1>
 </div>
 <div class="inhoud_body">
     <div class="linker_nav">
