--- a/html/Admin/Info.html
+++ b/html/Admin/Info.html
@@ -31,34 +31,16 @@
     <div class="info_body">
     <div class="linker_nav">
       <ul>
-        <li>
-          <h3><a href="/html/Admin/Dashboard.html">Dashboard</a></h3>
-        </li>
-        <li>
-          <h3><a href="/html/Admin/TeLaat.html">Te laat</a></h3>
-        </li>
-        <li>
-          <h3><a href="/html/Admin/Blacklist.html">Blacklist</a></h3>
-        </li>
-        <li>
-          <h3><a href="/html/Admin/Uitleningen.html">Uitleningen</a></h3>
-        </li>
-        <li>
-          <h3><a href="/html/Admin/Verleningen.html">Verlengingen</a></h3>
-        </li>
-        <li>
-          <h3><a href="/html/Admin/Inventaris.html">Inventaris</a></h3>
-        </li>
-        <li>
-          <h3><a href="#">Kits</a></h3>
-        </li>
-        <li>
-          <h3><a href="#">Info</a></h3>
-        </li>
-        <li>
-          <h3><a href="#">Defect</a></h3>
-        </li>
-      </ul>
+        <li><h3><a href="/html/Admin/Dashboard.html">Dashboard</a></h3></li>
+        <li><h3><a href="/html/Admin/TeLaat.html">Te laat</a></h3></li>
+        <li><h3><a href="/html/Admin/Blacklist.html">Blacklist</a></h3></li>
+        <li><h3><a href="/html/Admin/Uitleningen.html">Uitleningen</a></h3></li>
+        <li><h3><a href="/html/Admin/Verleningen.html">Verlengingen</a></h3></li>
+        <li><h3><a href="/html/Admin/Inventaris.html">Inventaris</a></h3></li>
+        <li><h3><a href="/html/Admin/Kits.html">Kits</a></h3></li>
+        <li><h3><a href="/html/Admin/Info.html">Info</a></h3></li>
+        <li><h3><a href="/html/Admin/Defect.html">Defect</a></h3></li>
+    </ul>
     </div>
     <div class="Info_rechter_grid">
     <div class="info_uitleen_uitleg">
