probleem:( info pagina een deel was niet meer aanwezig,uitlening toevoegen pagina css was weg ) opgelost

--- a/html/Admin/UitleningToevoegen.html
+++ b/html/Admin/UitleningToevoegen.html
@@ -38,15 +38,22 @@
             <li><h3><a href="/html/Admin/Defect.html">Defect</a></h3></li>
         </ul>
     </div>
-    <div class="rechter_grid">
-        <div class="uitlening_specificaties">
-            <form action="">
-                <input type="email" placeholder="Vul het e-mailadres in ...">
-                <input type="text" placeholder="Voer het apparaat-id of kit-id in ...">
-                <div class="datum_kiezen">
-                    <input type="date" placeholder="Bepaal het uitleentermijn">
-                </div>
-            </form>
+            <div class="rechter_grid">
+                <div class="uitlening_specificaties">
+                    <form action="">
+                        <div class="uitlening_toe">
+                        <h2>E-mail:</h2>
+                        <input type="email" placeholder="Vul het e-mailadres in ...">
+                    </div>
+                    <div class="uitlening_toe">
+                        <h2>Apparaat 1:</h2>
+                        <input type="text" placeholder="Voer het apparaat-id of kit-id in ...">
+                    </div>
+                        <div class="datum_kiezen">
+                            <h2>Uitleentermijn:</h2>
+                            <input type="date" placeholder="Bepaal het uitleentermijn">
+                        </div>
+                    </form>
             <div class="apparaat_uitlening_toevoegen">
                 <img src="/images/svg/plus-circle.svg" alt="">
                 <h3>Apparaat toevoegen aan uitlening</h3>
@@ -54,6 +61,8 @@
             <div class="bevestig">
                 <button type="submit">Bevestig</button>
             </div>
+        </div>
+    </div>
     
 </body>
 </html>
