--- a/html/Admin/Info.html
+++ b/html/Admin/Info.html
@@ -136,5 +136,11 @@
     </div>
   </div>
 </div>
+  <!-- form  -->
+  <h2 class="info-form-h2">Nieuwe aankondigingen</h1>
+    <form class="info-form">
+      <div class="info-text"><input type="text"></div>
+      <div class="info-submit"><input type="submit" value="Verstuur"></div>
+    </form>
   </body>
 </html>
