--- a/html/Home.html
+++ b/html/Home.html
@@ -1,171 +1,10 @@
+<!-- Home.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="/css/stylesheet.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-        </style>
+    <meta http-equiv="refresh" content="0; url=/php/Home.php" />
 </head>
 <body>
-    <!-- bovenste navigatie -->
-    <nav>
-      <div class="navbar_container">
-        <a href="Home.html"><img class="ehb_logo" src="/images/jpg/horizontaal EhB-logo (transparante achtergrond).png" alt="EhB-logo"></a>
-        <ul>
-            <li><a href="/html/Info.html"><h1>Info</h1></a></li>
-            <li><a href="/html/Inventaris.html"><h1>Inventaris</h1></a></li>
-            <li><a href="/html/Kalender.html"><h1>Kalender</h1></a></li>
-            <li><a href="/html/Reservaties.html"><h1>Reservaties</h1></a></li>
-        </ul>
-        <div class="rechter_navigatie">
-            <a href="/html/Favorietenlijst.html"><img src="/images/svg/heart-solid.svg" alt="favorietenlijst"></a>
-            <a href="#"><img src="/images/svg/cart-shopping-solid.svg" alt="winkelmandje"></a>
-            <a href="#"><img src="/images/svg/user-solid.svg" alt="profiel - logout"></a>
-        </div>
-      </div>
-    </nav>
-
-    <!-- zoekbalk -->
-    <div class="zoekbalk_container">
-        <div class="zoekbalk">
-            <select name="categorie" id="" >
-                <option value="alles"></option>
-                <option value="audio">Audio</option>
-                <option value="belichting">Belichting</option>
-                <option value="tools">Tools</option>
-                <option value="varia">Varia</option>
-                <option value="video">Video</option>
-                <option value="xr">XR</option>
-            </select>
-            <input id="zoek_input" type="text" placeholder="Geef een zoekterm in ...">
-            <button id="zoek_btn"><img src="/images/svg/magnifying-glass-solid.svg" alt="magnifying glass"></button>
-        </div>
-    </div>
-<div class="inhoud_body">
-    <!-- categorielijst -->
-    <div class="categorie">
-      <a href="#"><h1>Categorieën</h1></a>
-      <ul class="categorie_lijst">
-          <li><a href="#">Audio</a></li>
-          <li><a href="#">Belichting</a></li>
-          <li><a href="#">Tools</a></li>
-          <li><a href="#">Varia</a></li>
-          <li><a href="#">Video</a></li>
-          <li><a href="#">XR</a></li>
-      </ul>
-  </div>
-
-  <!-- Recent bekeken lijst -->
-  <div class="recent_container">
-      <h1>Recent bekeken</h1>
-      </div>
-      <div class="recent_lijst_container">
-          <img src="/images/svg/chevron-left-solid.svg" alt="">
-          <ul class="recent_lijst">
-              <li><a href="/html/ApparaatPagina.html">
-                  <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
-                  <h3>Canon-M50</h3>
-              </a></li>
-              <li><a href="/html/ApparaatPagina.html">
-                  <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
-                  <h3>Canon-M50</h3>
-              </a></li>
-          </ul>
-          <img src="/images/svg/chevron-right-solid.svg" alt="">
-      </div>
-  </div>
-
-  <!-- Hoe leen je iets uit? -->
-  <div class="uitleen_uitleg">
-      <h1>Hoe leen je iets uit?</h1>
-      <ul>
-          <li><a href="Info.html">
-              <h3>Stap 1</h3>
-              <p>Kies een apparaat</p>
-          </a></li>
-          <li><a href="Info.html">
-              <h3>Stap 2</h3>
-              <p>Bepaal je uitleenperiode</p>
-          </a></li>
-          <li><a href="Info.html">
-              <h3>Stap 3</h3>
-              <p>Plaats je reservatie</p>
-          </a></li>
-          <li><a href="Info.html">
-              <h3>Stap 4</h3>
-              <p>Haal het apparaat op in het medialab</p>
-          </a></li>
-      </ul>
-      <div class="meer_info">
-          <a href="Info.html">
-              <h3>Meer info</h3>
-          </a>
-      </div>
-  </div>
-</div>
- <!-- footer -->
-<footer>
-  <div class="footer_container">
-<div class="ehb-info">
-  <ul>
-    <!-- emial linken met echte mail -->
-    <li>
-      <a href="#"><img src="../images/svg/envelope-solid.svg" alt="envelope"> medialab.ehb@ehb.be</a>
-    </li>
-    <!-- linken so that it calls directly -->
-    <li><a href="#"><img src="../images/svg/phone-solid.svg" alt="phone"> +32 84 42 63 78</a></li>
-    <!-- linken so that it can directly go to the webside -->
-    <li>
-      <a href="#"><img src="../images/svg/desktop-solid.svg" alt="desktop"> www.erasmushogeschool.be</a>
-    </li>
-    <!-- linken met google maps -->
-    <li>
-      <a href="#"> <img src="../images/svg/location-dot-solid.svg" alt="location"> Nijverheidskaai 170,1070 Anderlecht</a
-      >
-    </li>
-  </ul>
-</div>
-<div class="opening-hours">
-  <h1>Openingsuren</h1>
-  <table>
-    <tr>
-      <th>Maandag</th>
-      <td>10:00 - 12:00</td>
-      <td>12:30 - 17:00</td>
-    </tr>
-    <tr>
-      <th>Dinsdag</th>
-      <td>/</td>
-      <td>/</td>
-    </tr>
-    <tr>
-      <th>Woensdag</th>
-      <td>/</td>
-      <td>/</td>
-    </tr>
-    <tr>
-      <th>Donderdag</th>
-      <td>10:00 - 12:00</td>
-      <td>12:30 - 17:00</td>
-    </tr>
-    <tr>
-      <th>Vrijdag</th>
-      <td>10:00 - 12:00</td>
-      <td>12:30 - 17:00</td>
-    </tr>
-    <tr>
-      <th>Weekend</th>
-      <td>/</td>
-      <td>/</td>
-    </tr>
-  </table>
-</div>
-</div>
-<div class="einde"><p>&copy;Groep 8 - Programming Project</p></div>
-</footer>   
-
+    <p>If you are not redirected, <a href="/php/Home.php">click here</a>.</p>
 </body>
 </html>
